Refactor UI and styling with Inter font and custom color palette
- Add Inter font from @fontsource
- Implement custom CSS variables with Radix UI color palette
- Update global styles with new color scheme and typography
- Simplify NavBar and update site metadata
- Enhance SubscriptionCalendar styling with new color tokens

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.10.1",
+    "@fontsource/inter": "^5.1.1",
     "@prisma/client": "^6.2.1",
+    "@radix-ui/colors": "^3.0.0",
     "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
